# get_novogene

./: .env  .env.example  .gitignore  Makefile  README.md  analysis.ipynb  fix.py  main.py  projects.json  pyproject.toml  scraper.py  server.py  storage.py
runs/: 2026-06-09T00-19-54.102.json  2026-06-09T00-21-17.470.json  2026-06-09T00-31-04.788.json  2026-06-09T01-08-55.985.json  2026-06-09T01-24-19.750.json  2026-06-09T17-07-35.380.json  2026-06-12T18-54-55.966.json  2026-06-12T20-02-31.930.json  2026-06-13T01-28-33.472.json  2026-06-15T13-18-32.959.json  2026-06-16T13-20-34.240.json  2026-06-17T11-46-03.378.json  2026-06-17T16-54-57.127.json  2026-06-18T10-52-24.652.json  2026-06-19T11-47-10.591.json  2026-06-22T12-07-16.416.json  2026-06-23T10-19-11.031.json
templates/: dashboard.html
